Fix extra padding in transcription panel (#957)

--- a/sitemedia/scss/components/_transcription.scss
+++ b/sitemedia/scss/components/_transcription.scss
@@ -690,7 +690,11 @@
             }
         }
         // top spacing for included after excluded image panel
-        &.excluded + div.transcription-panel + div.img {
+        &.excluded + div.transcription-panel + div.img,
+        &.excluded
+            + div.transcription-panel
+            + div.img
+            + div.transcription-panel {
             padding-top: 30px;
             @include breakpoints.for-tablet-landscape-up {
                 padding-top: 130px;
